# switch_utils

./: Cargo.toml
.cargo/: config.toml
swcli/: Cargo.toml
swu/: Cargo.toml  build.rs
swu/src/: cli.rs  file.rs  main.rs  utils.rs
