[package]
name = "swu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
dialoguer = "0.11.0"
shadow-rs = "0.24.1"
walkdir = "2.4.0"

[build-dependencies]
shadow-rs = "0.24.0"